# kaleidoscope

./: .gitignore  Dockerfile  docker-compose.yml  ejemplos.md  hlint.yaml  readme.md  setup-instructions.md  setup-macos.md
chapter2/: Lexer.hi  Lexer.hs  Main.hi  Main.hs  ParserH.hi  ParserH.hs  Syntax.hi
example/: example  example.ll  example.out  example.s
kaleidoscope/: .gitignore  CHANGELOG.md  adasdasd  cabal.project  kaleidoscope-fing.cabal  kaleidoscope.cabal  out.ll  package.yaml  stack.yaml
kaleidoscope/app/: Main.hs
kaleidoscope/debug/: err  err2  err3  sample_llvm.ll
kaleidoscope/examples/: Example.hs  IRBuilderExamples.hs  add.k  id_with_print.ll  llvm_ast
kaleidoscope/examples/llvm_example/: example.ll  list.ll
kaleidoscope/programs/: _multi_instr.k  add_sub.k  factorial_print.k  id.k  multi_instr.k  var_in.k
kaleidoscope/src/: CLI.hs  CLIParameters.hs  Codegen.hs  Emit.hs  Example.hs  IRBuilder.hs  Instructions.hs  JIT.hs  Jit.hs  Lexer.hs  List.hs  Main-dummy.hs  Main.hs  Parser.hs  ParserH.hs  Processor.hs  Repl.hs  Srep.hs  StdLibrary.hs  StringUtils.hs  Syntax.hs  Tuple.hs  Types.hs  err  err2
kaleidoscope/src/CodeGen/: GenModule.hs  GenOperand.hs  JIT.hs  LocalVar.hs
kaleidoscope/src/CodeGen/DataStructures/: List.hs  Tuple.hs
kaleidoscope/src/CodeGen/Utils/: Types.hs
kaleidoscope/src/IRBuilder/: GenModule.hs  GenOperand.hs  LocalVar.hs
kaleidoscope/src/Parser/: Lexer.hs  Parse.hs
kaleidoscope/src/StdLib/: BaseDefs.hs  GenLibs.hs  list.k  tuple.k
kaleidoscope/src/StdLib/cbits/: io.c  io.h  list.c  list.h
kaleidoscope/src/StdLib/lib/: list.k  tuple.k
kaleidoscope/src/cbits/: io.c  io.h  putchard.c  putchard.h
kaleidoscope/src/lib/: array.k  length.k  putchard.c
kaleidoscope/test/: Spec.hs
kaleidoscope/test/generator/: GenPrograms.hs  gen_programs.py  iterate.sh
kaleidoscope/test/output/: add_float_int.k  and_true_true.k  cons_add.k  cons_function.k  cons_functions.k  cons_int.k  const_float.k  const_int_float.k  const_int_int.k  const_tuple_bool.k  const_tuple_float.k  const_tuple_int.k  div_float_int.k  div_int_int.k  extern.k  fabs.k  fn_add_float_float.k  fn_add_float_int.k  fn_add_int_int.k  fn_create_list_bool.k  fn_div_int_int.k  fn_int_float.k  fn_nested.k  fn_return_tuple.k  fn_return_tuple_nested.k  fst_float.k  fst_int.k  fst_tuple.k  fst_tuple_const.k  head_bool.k  hello_world.k  higher_order_float.k  id.k  if_float.k  if_int.k  let_in.k  let_in_float.k  let_in_int.k  let_in_multiple.k  let_in_nested.k  (+22 more)
kaleidoscope/test/parsed/: add  add_sub  constant  factorial  factorial_print  fib  fib_iterative  global  hello_world  id  let_in_multiple  pow  pow_operator  sequence_operator  sub  unary_minus  var_in
kaleidoscope/test/programs/: add_int_float.k  cons_function.k  cons_functions.k  cons_int.k  const_float.k  const_int_float.k  const_int_int.k  const_tuple_bool.k  const_tuple_float.k  const_tuple_int.k  const_tuple_multiple.k  constant.k  cos.k  double_to_int.k  extern.k  fabs.k  factorial.k  fib.k  fib_iterative.k  fn_add_float_int.k  fn_create_list_float.k  fn_div_int_int.k  fn_int_float.k  fn_nested.k  fn_return_tuple_nested.k  foldr_int.k  fst_float.k  fst_tuple_const.k  global.k  head_float.k  head_int.k  hello_world.k  higher_order_int.k  if_float.k  if_int.k  if_nested.k  int_to_double.k  let_in.k  let_in_float.k  let_in_int.k  (+24 more)
lambdakal/: .dockerignore  cabal.project  lambdakal.cabal
lambdakal/examples/: Primes.hs  PrimesFast.hs  RecursiveFib.hs  SelectionSort.hs  primes.py  selection_sort.k  selection_sort_faster.k
lambdakal/examples/bench/: runhaskell.sh  selection_sort  selection_sort.k  (+1 more)
lambdakal/src/: CLIParameters.hs  Main.hs  Processor.hs  Syntax.hs
lambdakal/test/: Spec.hs
notas/: 06-03-2023.md  08-04-2023-dynamic-libraries.md  13-12-2021.md  13-12-2022.md  21-05-2023-interprete.md  compilacion-ll.md
src/: Lexer.hs  Main.hs  ParserH.hs
(+136 files in other folders)
