cabal-version:      3.8
name:               kaleidoscope-fing
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Andrés Collares
maintainer:         andres.collares@fing.edu.uy

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common-options
    build-depends:
        , base          ^>=4.14
        , llvm-hs-pure  ^>=12.0

    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates -Wredundant-constraints
        -Wnoncanonical-monad-instances -threaded -lstdc++ -dynamic

    if impl(ghc >=8.2)
        ghc-options: -fhide-source-paths

    if impl(ghc >=8.4)
        ghc-options: -Wpartial-fields

    if impl(ghc >=8.8)
        ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

    if impl(ghc >=8.10)
        ghc-options: -Wunused-packages

    default-language: Haskell2010

executable kaleidoscope-fing
    import: common-options
    main-is: Main.hs
    other-modules: Codegen, Lexer, ParserH, Syntax, JIT, IRBuilder, Types
    hs-source-dirs: src
    build-depends:
        , bytestring  >=0.10
        , llvm-hs     ^>=12.0
        , containers    >=0.6
        , mtl >=2.2 && <2.3
        , text ^>= 1.2
        , haskeline >=0.7
        , parsec >=3.1.0

-- library kaleidoscope-fing-lib
--     exposed-modules: ParserH
--     hs-source-dirs: src
--     build-depends: base ^>=4.14
--     default-language: Haskell2010

test-suite unit-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
      , src
  other-modules: Codegen, Lexer, ParserH, Syntax, JIT, Types
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    --   kaleidoscope-fing
    base ^>=4.14
    , tasty
    , tasty-hunit
    , bytestring  >=0.10
    , llvm-hs     ^>=12.0
    , llvm-hs-pure  ^>=12.0
    , containers    >=0.6
    , mtl >=2.2 && <2.3
    , text ^>= 1.2
    , haskeline >=0.7
    , parsec >=3.1.0
    -- , kaleidoscope-fing-lib
  default-language: Haskell2010

